# OS_Lab1

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
benchmark/: CMakeLists.txt
benchmark/WinShell/: Dedup.cpp  EmaSearchInt.cpp
ci/: commons.bash  precommit.bash
cmake/: CompileOptions.cmake
source/: CMakeLists.txt
source/WinShell/: Global.h  Main.cpp  Shell.cpp  Shell.h  Util.cpp  Util.h
source/monolith/: Global.h  Shell.cpp  Util.cpp  Util.h
test/WinShell/: ShellTest.cpp
test/monolith/: HelloWorldTest.cpp
